# deepsearch-examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example.env  pyproject.toml  requirements.txt
.github/actions/setup-poetry/: action.yml
.github/workflows/: checks.yml  nb_runner.yml
data/converted/: 1806.02284.json  2206.00785.json  2305.14962.json
dsnotebooks/: settings.py
examples/attachment_management/: README.md  manage_attachments.ipynb
examples/bring_your_own_converted_documents/: README.md  upload_converted_documents.ipynb
examples/bring_your_own_pdf/: README.md  upload_and_explore_pdfs.ipynb  upload_explore_download_pdfs.ipynb
examples/bring_your_own_scanned_pdf/: upload_and_explore_pdfs.ipynb
examples/data_export/: README.md  data_export.ipynb
examples/data_query_chemistry/: README.md  chemistry.ipynb
examples/data_query_chemistry_patcid/: README.md  chemistry_patcid.ipynb
examples/data_query_export_figures/: README.md  export_figures.ipynb
examples/data_query_quick_start/: README.md  quick_start.ipynb
examples/data_query_snippets/: README.md  snippets.ipynb
examples/document_bulk_upload/: run_batch_upload.py
examples/document_conversion/: README.md  ds-auth.json.example  requirements.txt
examples/document_conversion/notebooks/: convert_documents.ipynb  extract_tables.ipynb  visualize_bbox.ipynb
examples/document_conversion/scripts/: extract_figures.py  extract_tables.py
examples/document_conversion_custom_settings/: README.md  convert_documents_custom.ipynb
examples/document_conversion_extract_figures/: README.md  extract_figures.py
examples/document_conversion_extract_tables/: README.md  convert_tables_to_html.py  extract_tables.ipynb  extract_tables.py
examples/document_conversion_quick_start/: README.md  convert_documents.ipynb
examples/document_conversion_visualize_bbox/: README.md  visualize_bbox.ipynb
examples/document_qa/: README.md  doc_collection_qa.ipynb  documentqa_starter.ipynb
examples/integration_argilla/: README.md  argilla_upload.ipynb
examples/json_export/: README.md  json_export.ipynb
examples/kg_download_quick_start/: README.md  kg_download_quick_start.ipynb
examples/nlp_for_materials/: README.md  nlp_for_materials.ipynb
examples/nlp_for_metadata/: README.md  nlp_for_metadata.ipynb
examples/nlp_for_references/: README.md  nlp_for_references.ipynb
examples/nlp_on_documents/: README.md  nlp_on_documents.ipynb
examples/qa/: qa_deep_dive.ipynb  qa_quick_start.ipynb
examples/qa_doc_collection/: README.md  doc_collection_qa.ipynb
examples/qa_rag_semantic_retrieval/: README.md  qa_deep_dive.ipynb  qa_quick_start.ipynb
examples/qa_single_doc/: README.md  single_doc_qa.ipynb
examples/scanned_document_export/: README.md  upload_and_explore_pdfs.ipynb
nbrunner/: README.md  nb_runner.py  settings.py
